fix: address block overflow

--- a/foodys/src/styles/_dashboard.scss
+++ b/foodys/src/styles/_dashboard.scss
@@ -559,6 +559,7 @@
     display: flex;
     align-items: center;
     column-gap: 4px;
+    flex-wrap: wrap;
 
     @media (max-width: $breakpoint992) {
       flex-direction: column;
