--- a/foodys/src/styles/_restaurant-page.scss
+++ b/foodys/src/styles/_restaurant-page.scss
@@ -196,7 +196,7 @@
 
   &__info {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: auto 1fr;
     margin: 18px 0 35px;
 
     @media (max-width: $breakpoint992) {
